--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "bankingapp",
+  "homepage": "https://vinaykumar7499.github.io/bankingApp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
